Simplify the CLI command surface